# melo-control

./: .gitignore  Cargo.toml  babel.config.json  build.rs  codegen.yaml  generated.rs  package-lock.json  package.json  schema.graphql  tsconfig.json  webpack.config.js
src/: api.rs  config.rs  main.rs
src/data/: collections.rs  deferred.rs  mod.rs  navigation.rs  selection.rs
src/graphql/: generated.ts
src/graphql/mutations/: add_collection.graphql  transform_sources.graphql
src/graphql/queries/: get_collection.graphql  get_collection_sources.graphql  get_collections.graphql  preview_transform.graphql
src/queries/: delete_collection.graphql  get_collection.graphql
src/ui/: CollectionList.qml  SourceGroupList.qml  backend.js  backend.ts  collection.rs  controllers.rs  diff.ts  main.qml  main_panel.rs  mod.rs  navigation.rs  theme.rs
src/ui/backend/: collection.js  collection.ts  net.js  net.ts  source.js  source.ts
src/ui/transform/: CoverChooser.qml  EditGroupTags.qml  PreviewTransform.qml
src/ui/widgets/: deferred.rs
