[package]
name = "melo-control"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", default-features = false, features = ["x11", "svg", "image", "im"] }
#druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery.git", features = ["async"]}
graphql_client = "0.9.0"
reqwest = "0.11.3"
uuid = { version = "0.8.2", features = ["v4"] }
log = "0.4.14"
simplelog = "0.10.0"
simple_logger = "1.11.0"
serde = "1.0.126"
serde_json = "1.0.64"
gurkle = "0.3.0"
tokio = { version = "1.8.0", features = ["full"] }
itertools = "0.10.1"

[dev-dependencies]
insta = "1.7.1"
