[package]
name = "melo-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cstr = "*"
eyre = "0.6"
gurkle = "0.3"
itertools = "0.10"
kconfig = "*"
ki18n = { version = "*", features = ["qmetaobject"] }
kirigami = "*"
log = "*"
qmetaobject = "0.2"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = "1.0"
serde_json = "1.0"
simple_logger = "1.11.0"
simplelog = "0.10.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "*"
uuid = { version = "1", features = ["v4"] }
qsyncable-sys = { git = "https://github.com/chrismanning/qsyncable-sys.git", rev = "8d546b879e7745d38bed4ef53148ba68afe61e91" }

[patch.crates-io]
kconfig = { git = "https://invent.kde.org/chrismanning/kconfig-rs.git", rev = "55cb318d4002e1608f48ffa98958ac0d010e20ed" }
qmetaobject = { git = "https://github.com/woboq/qmetaobject-rs.git", rev = "4a661a4064349b7df26903a2d0b0eba4dfafce26" }
qttypes = { git = "https://github.com/woboq/qmetaobject-rs.git", rev = "4a661a4064349b7df26903a2d0b0eba4dfafce26" }

[dev-dependencies]
insta = "1"

[build-dependencies]
eyre = "0.6"
npm_rs = "0.2.1"

[profile.dev]
debug = 2
split-debuginfo = "off"
